test/negative/internal_hxrt_helper_import/Main.hx
import hxrt.sys.NativeSys;

class Main {
	static function main():Void {
		var helperType = NativeSys;
		trace(helperType);
	}
}
